# enrich-ddf-floor-2

./: .commitlintrc.json  .coverage  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env  .env.example  .env.template  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .pre-commit-config.yaml.backup.20251102_202850  .shellcheckrc  API_STATUS_REPORT.md  CLEARBIT_DISCONTINUATION_UPDATE.md  DATA_SOURCES_DIRECTORY.md  Dockerfile  ENRICHMENT_STANDARDIZATION_SUMMARY.md  ERRORS_RESOLVED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LINTING_SETUP.md  Makefile  Makefile.bak.20251112_205507  QUICK_REFERENCE.md  QUICK_START_REAL_DATA.txt  README.md  REAL_DATA_ENRICHMENT_PLAN.md  REAL_DATA_SOURCES_PLAN.md  TEST_RESULTS.md  advanced_auto_fix.py  advanced_auto_fix.py.bak  advanced_auto_fix_report.md  agents.md  app.db  auto_fix_impact.md  auto_fix_report.md  (+25 more)
.cursor/: CONFIGURATION_IMPROVEMENTS.md  settings.json
.cursor/commands/: document.md  recurrent-errors.md
.cursor/rules/: 00_alteration_history.md  0_custom_instructions.md  1_01_1_preserve_all_functionality.mdc  1_01_preserve_all_functionality.mdc  1_02_20_autonomy_user_handoff.mdc  1_02_autonomy_user_handoff.mdc  2_01_3_branch_naming_documentation.mdc  2_01_branch_naming_documentation.mdc  3_01_11_logging_observability.mdc  4_01_2_folderstructure_discipline.mdc  4_01_folder_structure_discipline.mdc  4_02_4_configfile_editing.mdc  4_02_config_file_editing.mdc  4_03_5_central_runsh_interface.mdc  4_03_central_runsh_interface.mdc  4_04_6_environment_platform_configs_config.mdc  4_04_environment_platform_configs_config.mdc  4_05_7_streamlit_config_sync.mdc  4_05_streamlit_config_sync.mdc  4_06_8_path_handling.mdc  4_06_path_handling.mdc  4_07_9_filelifecycle_discipline.mdc  4_07_file_lifecycle_discipline.mdc  4_08_10_avoid_duplication.mdc  4_08_avoid_duplication.mdc  4_09_12_planning_docs_ci_standards.mdc  4_09_logging_observability.mdc  4_10_13_minimize_new_files.mdc  4_10_planning_docs_ci_standards.mdc  4_11_14_recurrent_errors.mdc  4_11_minimize_new_files.mdc  4_12_15_dadosfera_floors.mdc  4_12_recurrent_errors.mdc  4_13_16_js_floor_rules.mdc  4_13_dadosfera_floors.mdc  4_14_17_no_simplified_standalone_partial_backup_clones.mdc  4_14_js_floor_rules.mdc  4_15_18_dryrun_first.mdc  4_15_no_simplified_stand_alone_partial_backup_clones.mdc  4_16_dry_run_first.mdc  (+53 more)
.dadosfera/commands/: README.md
.tmp/: create_guide.sh  entry_app.sh  entry_celery.sh  entry_flower.sh
active/: 01_immediate_priorities.md  03_execution_commands.md  04_current_status.md  04_current_status_summary.md  05_execution_summary.md  05_final_execution_summary.md  06_latest_execution_summary.md  07_final_status_update.md  08_comprehensive_execution_summary.md  09_retry_execution_summary.md  10_branch_merge_plan.md  11_merge_completion_report.md  12_critical_infrastructure_completion.md  15_quick_win_linter_fixes_completion.md  16_comprehensive_test_and_linter_completion.md  17_final_test_and_linter_status.md  18_comprehensive_task_completion_report.md  19_final_comprehensive_completion_report.md  20_ultimate_completion_report.md  21_final_verification_completion_report.md  22_comprehensive_task_completion_final.md  23_comprehensive_task_completion_verified.md  24_comprehensive_task_completion_final_verified.md  25_comprehensive_task_completion_ultimate_verified.md  26_comprehensive_task_completion_final_ultimate_verified.md  27_comprehensive_task_completion_verified_ultimate_final.md  28_comprehensive_task_completion_final_verified_ultimate.md  29_comprehensive_task_completion_verified_ultimate_final.md  30_comprehensive_task_completion_final_verified_ultimate.md  31_comprehensive_task_completion_final_verified_ultimate_final.md  32_comprehensive_task_completion_final_verified_ultimate_final_complete.md  33_comprehensive_task_completion_final_verified_ultimate_final_complete_verified.md  34_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate.md  35_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final.md  36_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final_complete.md  37_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final_complete_verified.md  38_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final_complete_verified_ultimate.md  39_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final_complete_verified_ultimate_final.md  40_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final_complete_verified_ultimate_final_complete.md  41_comprehensive_task_completion_final_verified_ultimate_final_complete_verified_ultimate_final_complete_verified_ultimate_final_complete_verified.md  (+34 more)
alembic/: env.py
app/: __init__.py  main.py
app/core/: celery.py  config.py  database.py  logging.py
config/: .env.template  README.md  __init__.py  ports.py  prometheus.yml
database/: connection.py  models.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  TASKS_EXECUTED.md  cursorignore_management.md  dynamic_port_migration_summary.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
prioritized/: MI_LE_4h_MEDIUM_enhance_api_documentation.md  QW_2h_HIGH_optimize_test_execution_speed.md
rules/: 4_21_branch_protection_bypass_guide.md
scripts/: README.md  access_ignored_file.sh  add-makefile-timeouts.sh  add-node-options.js  bulk-update-repo.sh  configure-ide.sh  cursor_ignore_override.sh  cursor_ignore_restore.sh  generate-compliance-report.sh  init-db.sql  scan-all-repos.sh  start-dev.sh  test_dynamic_ports.sh  update_documentation_ports.sh  validate_taxonomy.py  verify-execution.sh
templates/: README-linter.md  pyproject.toml.template
tests/: __init__.py  conftest.py  index_tests.yaml  run_tests.sh  test_real_enrichment.py
tools/: README.md  TOOLS_ROADMAP.md
workflows/: run.sh
(+291 files in other folders)
