[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enrich-ddf-floor-2"
version = "0.1.0"
description = "Data enrichment service for DDF Floor 2"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "6.0"
addopts = "--strict-markers --tb=short --cov=main --cov-report=term-missing --cov-report=html --cov-fail-under=80"
filterwarnings = [
    "ignore::DeprecationWarning"
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')"
]

# === OPTIMIZED LINTER CONFIGURATIONS ===

[tool.ruff]
extend = "config/lint/ruff-shared.toml"

[tool.ruff.lint]
# Enable comprehensive rule sets

# Ignore specific rules that might be too strict for our use case
# Focus on functional issues over cosmetic style preferences

[tool.ruff.lint.per-file-ignores]
# Test files: allow more lenient rules for test code
"tests/**/*.py" = [
    "S101",   # Use of assert
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "S311",   # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches (tests often have many branches)
    "PLR0915", # Too many statements (test functions can be long)
    "TRY300", # Consider moving statement to else block (test style preference)
    "TRY301", # Abstract raise to inner function (test style preference)
    "TRY401", # Redundant exception object in logging.exception (test style preference)
    "PERF203", # try-except within loop (acceptable in test setup/teardown)
    "E722",   # Do not use bare except (common in test error handling)
]

[tool.ruff.format]
# Ruff formatter configuration (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.main]
# Files or directories to be skipped. They should be base names, not paths.
ignore = ["CVS", ".git", "__pycache__", "htmlcov", "venv", "build", "dist"]

# Add files or directories matching the regex patterns to the ignore-list.
ignore-patterns = ["^\\..*", ".*\\.tmp$", ".*\\.log$"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "import-error",
    "no-member",
    "line-too-long",  # Handled by ruff format
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-locals = 15
max-branches = 12
max-statements = 50

# === PYRIGHT/BASEDPYRIGHT CONFIGURATION ===
[tool.pyright]
include = [
    "main.py",
    "config.py",
    "database/",
    "tests/"
]
exclude = [
    "**/__pycache__",
    "**/.*",
    "venv/",
    "build/",
    "dist/",
    "htmlcov/",
    "alembic/versions/",
    "scripts/",
    "docs/",
    "active/",
    ".coverage",
    "*.db",
    "*.log",
    ".tmp/",
    "tmp/"
]
ignore = [
    "alembic/",
    "scripts/",
    "QUICK_REFERENCE.md",
    "IMPLEMENTATION_SUMMARY.md"
]
pythonVersion = "3.13"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
useLibraryCodeForTypes = false
autoSearchPaths = true
autoImportCompletions = true
indexing = true
